# compas

./: .gitignore  CITATION.cff  FELLOWSHIP_PROPOSAL.md  FELLOWSHIP_RESEARCH_BRIEF.md  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
config/: audit.yaml  core_audit.yaml
data/human_baseline/: evaluator_schema.csv
data/name_validation/: README.md  name_candidates.csv  perception_responses.csv  replacement_candidate_summary_template.csv  submitted_survey_manifest.csv
data/occupations/: occupation_registry.csv
data/simulated/name_validation/: README.md
data/templates/: resume_templates.csv
docs/: aspredicted_preregistration.md  core_audit_preregistration.md  data_sources.md  deviations_from_preregistration.md  ethics_statement.md  external_preregistration_checklist.md  human_baseline_protocol.md  limitations.md  methodology.md  model_card.md  name_pretest_recovery_plan.md  name_signal_validation_protocol.md  osf_preregistration.md  power_analysis.md  preregistration.md
results/core_placebo/: core_placebo_recovery.csv  core_placebo_validation_report.md  core_run_quality.csv  run_manifest.json
results/name_validation/: name_balance_tests.csv  name_summary.csv  submitted_survey_balance_tests.csv  submitted_survey_name_summary.csv  submitted_survey_validation_report.md
results/placebo/: data_quality.csv  descriptive_summary.csv  group_disparities.csv  model_coefficients.csv  placebo_effect_recovery.csv  placebo_validation_report.md  run_manifest.json
results/simulated/name_validation/: name_balance_tests_simulated.csv  name_summary_simulated.csv  simulation_manifest.json
scripts/: build_name_registry.py  build_occupation_registry.py  download_public_data.py  make_audit_design_figure.py  make_result_figures.py  power_analysis.py  reproduce_all_results.sh  reproduce_core_placebo.sh  run_core_live_audit.sh  run_full_validation.sh  run_live_audit.sh
src/compas_audit/: __init__.py  analyze.py  balanced_name_selection.py  common.py  core_analysis.py  generate.py  name_validation.py  prompts.py  providers.py  run_audit.py  simulated_perception.py
tests/: test_balanced_name_selection.py  test_core_audit.py  test_external_preregistration.py  test_name_validation.py  test_pipeline.py  test_simulated_perception.py
