[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compas-llm-audit"
version = "0.4.1"
description = "Reproducible audit of perceived resume signals in LLM screening"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sriramkrishnan Nandhakumar"}]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "tabulate>=0.9",
]

[project.optional-dependencies]
api = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
compas-generate = "compas_audit.generate:main"
compas-run = "compas_audit.run_audit:main"
compas-analyze = "compas_audit.analyze:main"
compas-validate-names = "compas_audit.name_validation:main"
compas-simulate-name-pretest = "compas_audit.simulated_perception:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
