[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-hiring-bias-audit"
version = "0.6.0"
description = "Preregistered matched-resume audit of LLM hiring evaluations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sriramkrishnan Nandhakumar"}]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "tabulate>=0.9",
]

[project.optional-dependencies]
api = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
hiring-audit-generate = "compas_audit.generate:main"
hiring-audit-run = "compas_audit.run_audit:main"
hiring-audit-analyze = "compas_audit.analyze:main"
hiring-audit-analyze-core = "compas_audit.core_analysis:main"
hiring-audit-validate-names = "compas_audit.name_validation:main"
hiring-audit-simulate-name-pretest = "compas_audit.simulated_perception:main"
hiring-audit-select-balanced-names = "compas_audit.balanced_name_selection:main"

# Legacy aliases are retained so previously validated scripts and commits remain reproducible.
compas-generate = "compas_audit.generate:main"
compas-run = "compas_audit.run_audit:main"
compas-analyze = "compas_audit.analyze:main"
compas-analyze-core = "compas_audit.core_analysis:main"
compas-validate-names = "compas_audit.name_validation:main"
compas-simulate-name-pretest = "compas_audit.simulated_perception:main"
compas-select-balanced-names = "compas_audit.balanced_name_selection:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
